# shoot

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  architecture.excalidraw  debug_computation.ts  docker-compose.yml  instrumentation.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js.bak  test-arcium-flow.ts  tsconfig.json  tsconfig.tests.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
artifacts/: arcium_clock.json  arcium_fee_pool.json  arx_ata_83vJ_mGHZ.json  arx_ata_9cRL_GnfM.json  arx_ata_DUYP_ZCTP.json  arx_mint.json  arx_node_9cRL_GnfM.json  arx_node_DUYP_ZCTP.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  init_position_raw_circuit_1.json  mempool_acc.json  mxe_acc.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  operator_acc_9cRL_GnfM.json  operator_acc_DUYP_ZCTP.json  wallet_acc_83vJ_mGHZ.json  wallet_acc_9cRL_GnfM.json  wallet_acc_DUYP_ZCTP.json  wallet_acc_callback_7LXn_rxJR.json  wallet_acc_callback_9KMy_aVrq.json
data/: competition-cohorts.json
docs/: .mintignore  docs.json  index.mdx
keeper/: Cargo.toml  Dockerfile
keeper/src/: config.rs  error.rs  main.rs
keeper/src/api/: handlers.rs  mod.rs  sse.rs
keeper/src/db/: models.rs  queries.rs
keeper/src/grpc/: decoder.rs  mod.rs  subscriber.rs
keeper/src/lifecycle/: fsm.rs
keeper/src/scoring/: engine.rs  metrics.rs  mod.rs
prisma/: schema.prisma
programs/shoot/: .mocharc.yml  Anchor.toml  Cargo.toml  Surfpool.toml  package.json  tsconfig.json  txtx.yml
programs/shoot/runbooks/: README.md
programs/shoot/runbooks/deployment/: main.tx
programs/shoot/src/: constants.rs  error.rs  lib.rs  oracle.rs
programs/shoot/src/state/: custody.rs  mod.rs  oracle.rs  perpetuals.rs  pool.rs  position.rs
programs/shoot/tests/: shoot.e2e.ts  shoot.test.ts  shoot.ts
programs/shoot/tests/helpers/: litesvm.ts  surfpool.ts
scripts/: agent-adrena-surfpool.ts  agent-chat-surfpool.ts  check_custody.ts  find-mainnet-trades.ts  inspect-ix.ts  inspect-ix2.ts  refresh-oracle.ts  run-agent-surfpool.ts  run-live-validation.ts  run-mini-competition.ts  test-trade.ts
sdk/: package-lock.json  package.json  tsconfig.json
shoot-trading-skill/: SKILL.md
tests/: adrena-schema.test.mts  shoot.ts  (+23 more)
(+240 files in other folders)
