[package]
name = "shoot-keeper"
version = "0.1.0"
edition = "2021"
description = "Position monitor, scoring engine, and competition lifecycle keeper for Adrena Shoot"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
borsh = "0.10"
borsh-derive = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = "0.1"
futures = "0.3"
bs58 = "0.5"
sha2 = "0.10"
yellowstone-grpc-client = "2.0"
yellowstone-grpc-proto = "2.0"
tonic = "0.12"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
