[package]
name = "shoot"
version = "0.2.0"
description = "On-chain competition settlement for Adrena Shoot"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shoot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
